# rwm

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  run.sh
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  server_reply.rs  tag_id.rs
common/src/command/: config_cmd.rs  layout_cmd.rs  mod.rs  monitor_cmd.rs  tag_cmd.rs  window_cmd.rs
rwm/: Cargo.toml
rwm/src/: color.rs  command.rs  command_handlers.rs  config.rs  enums.rs  errors.rs  event_handlers.rs  focus_history.rs  main.rs  mod_mask.rs  monitors_history.rs  newtypes.rs  rect.rs  spawn_rule.rs  states.rs  tag_id.rs  tests.rs  utils.rs  windows_history.rs
rwm/src/layouts/: grid.rs  mod.rs  monad_tall.rs
rwm/src/states/: mod.rs  mon_state.rs  tag_state.rs  win_state.rs
rwm/src/states/wm_state/: command_handlers.rs  event_handlers.rs  mod.rs
src/: config.rs  main.rs  states.rs  utils.rs
