[package]
name = "rwm"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
edition = "2018"
description = "The Rusty Window Manager"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = "0.7"
