[package]
name = "rwmc"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
description = "The Rusty Window Manager - The Client"
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
