[package]
name = "rwm"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
description = "The Rusty Window Manager"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
x11rb = { version = "0.8", features = ["cursor", "randr"] }
polling = "2.0"
common = { path = "../common" }
serde = "1"
serde_json = "1"
ron = "0.6"
anyhow = "1"
structopt = "0.3"
oorandom = "11"

[features]
# Creates two 960x1080 monitors. Used for testing with Xephyr
fake_monitors = []