[package]
name = "rwm"
version = "0.1.0"
authors = ["Spyros Roum <spyrosr1@gmail.com>"]
description = "The Rusty Window Manager"
edition = "2021"
license-file = "LICENSE"

[dependencies]
x11rb = { version = "0.8", features = ["cursor", "randr"] }
polling = "2.0"
common = { path = "../common" }
serde = "1"
serde_json = "1"
ron = "0.6"
anyhow = "1"
structopt = "0.3"
dirs = "3"

log = "0.4"
flexi_logger = { version = "0.18", default_features = false, features = ["async", "colors"] }

[features]
# Creates two 960x1080 monitors. Used for testing with Xephyr
fake_monitors = []
